[package]
name = "dedup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
clap = { version = "4.0.27", features = ["derive"] }
filetime = "0.2.17"
generic-array = "0.14.6"
hex = "0.4.3"
hex-literal = "0.3.4"
num-format = "0.4.3"
sha2 = { version = "0.10.2", features = ["asm"] }
walkdir = "2.3.2"

[profile.release]
lto = true
